# h2mare

./: .gitignore  CHANGELOG.md  CLAUDE.md  config.yaml  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  cli.md  configuration.md
docs/api/: adhoc_converters.md  compiler.md  index.md  parquet2csv.md  parquet_plotter.md
h2mare/: __init__.py  config.py  models.py  pipeline_manager.py  types.py
h2mare/cli/: __init__.py  catalog.py  compile.py  main.py  nc2zarr.py  zarr2parquet.py
h2mare/downloader/: __init__.py  aviso_downloader.py  base.py  cds_downloader.py  cmems_downloader.py  registry.py
h2mare/format_converters/: __init__.py  base.py  netcdf2zarr.py  parquet2csv.py  zarr2parquet.py
h2mare/processing/: compiler.py  compiler_registry.py  extractor.py
h2mare/processing/core/: aviso.py  cds.py  cmems.py  fronts.py
h2mare/storage/: __init__.py  parquet_catalog.py  parquet_helpers.py  parquet_indexer.py  parquet_plotter.py  parquet_store.py  provenance.py  storage.py  var_coverage_index.py  xarray_helpers.py  zarr_catalog.py  zarr_scanner.py
h2mare/utils/: __init__.py  date_range.py  datetime_utils.py  files_io.py  logging.py  paths.py  plot.py  spatial.py
logs/: .gitignore
scripts/: bathymetry.py  ekman_climatology.py  ekman_derived_vars.py  profile_extract_chunking.py  rechunk_stores.py  run_pipeline.bat
tests/: conftest.py  test_aviso_downloader.py  test_aviso_processing.py  test_base_downloader.py  test_cds.py  test_cds_downloader.py  test_cli.py  test_cmems_downloader.py  test_cmems_processing.py  test_cmems_utils.py  test_commons.py  test_compiler.py  test_compiler_registry.py  test_config.py  test_coverage.py  test_coverage_utils.py  test_datetime_utils.py  test_extractor.py  test_files_io.py  test_fronts.py  test_labels.py  test_logging.py  test_logging_utils.py  test_models.py  test_netcdf2zarr.py  test_netcdf2zarr_engine.py  test_parquet2csv.py  test_parquet_helpers.py  test_parquet_indexer.py  test_parquet_plotter.py  test_parquet_store.py  test_pipeline_manager.py  test_plot.py  test_registry.py  test_spatial.py  test_storage.py  test_types.py  test_utils_paths.py  test_validators.py  test_var_coverage_index.py  (+4 more)
